# src/main/openapi/account_service.swagger.yml
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/users/{userId}/accounts": {
+    "/users/{user-id}/accounts": {
       "get": {
         "tags": [
           "account-controller"
@@ -21,7 +21,7 @@
         "operationId": "getAccountsByUserId",
         "parameters": [
           {
-            "name": "userId",
+            "name": "user-id",
             "in": "path",
             "required": true,
             "schema": {
@@ -50,6 +50,16 @@
               }
             }
           },
+          "404": {
+            "description": "Account service is unable find requested resource",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Account service encountered an unexpected internal error",
             "content": {
@@ -63,17 +73,17 @@
         }
       }
     },
-    "/users/{userId}/accounts/{accountId}/transactions": {
+    "/users/{user-id}/accounts/{account-id}/transactions": {
       "get": {
         "tags": [
-          "account-controller"
+          "transaction-controller"
         ],
         "summary": "Account transaction list",
         "description": "Provide list of account transactions for requested account<br/> ",
         "operationId": "getTransactionsByAccountId",
         "parameters": [
           {
-            "name": "userId",
+            "name": "user-id",
             "in": "path",
             "required": true,
             "schema": {
@@ -81,7 +91,7 @@
             }
           },
           {
-            "name": "accountId",
+            "name": "account-id",
             "in": "path",
             "required": true,
             "schema": {
@@ -131,6 +141,16 @@
               }
             }
           },
+          "404": {
+            "description": "Account service is unable find requested resource",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiError"
+                }
+              }
+            }
+          },
           "500": {
             "description": "Account service encountered an unexpected internal error",
             "content": {
@@ -147,11 +167,14 @@
   },
   "components": {
     "schemas": {
-      "AccountDto": {
+      "Account": {
         "required": [
           "accountName",
           "accountType",
-          "balanceDate"
+          "balanceDate",
+          "accountNumber",
+          "currency",
+          "openingAvailableBalance"
         ],
         "type": "object",
         "properties": {
@@ -189,12 +212,15 @@
         }
       },
       "AccountResponse": {
+        "required": [
+          "accounts"
+        ],
         "type": "object",
         "properties": {
           "accounts": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/AccountDto"
+              "$ref": "#/components/schemas/Account"
             }
           }
         }
@@ -247,6 +273,7 @@
             "enum": [
               "200 OK",
               "400 BAD_REQUEST",
+              "404 NOT_FOUND",
               "500 INTERNAL_SERVER_ERROR"
             ]
           },
